# dirsearch

./: AGENTS.md  CONTRIBUTORS.md  __main__.py  config.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml  pyinstaller-linux.yml  pyinstaller-macos-intel.yml  pyinstaller-macos-silicon.yml  pyinstaller-windows.yml
lib/connection/: requester.py  response.py
lib/core/: data.py  options.py
lib/parse/: cmdline.py
lib/report/: csv_report.py  html_report.py  json_report.py  markdown_report.py  plain_text_report.py  xml_report.py
lib/view/: terminal.py
requirements/: runtime.txt
tests/: check_packaged_install.py
tests/connection/: test_requester.py
